<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_one">1. Which country’s flag has the most stars?</string>
    <string name="question_two">2. What does the “e” in e-mail stand for?</string>
    <string name="question_three">3. Havana is the capital city of which country?</string>
    <string name="question_four">4. Which chess piece can only move diagonally?</string>
    <string name="question_five">5. “Murder on the Orient Express” stars which fictional detective?</string>
    <string name="question_six">6. What was the flight number of the Pan Am plane that exploded over Scotland in 1988?</string>
    <string name="question_seven">7. Which country is hosting the 2026 world cup?</string>
    <string name="question_eight">8. In what year did the famous Battle of Agincourt take place? </string>
    <string name="question_one_option_one">United States of America</string>
    <string name="question_one_option_two">Portugal</string>
    <string name="question_one_option_three">New Zealand</string>
    <string name="question_one_option_four">Brazil</string>
    <string name="question_two_option_one">Event</string>
    <string name="question_two_option_two">Electronic</string>
    <string name="question_two_option_three">Entertaining</string>
    <string name="question_two_option_four">Extra</string>
    <string name="question_three_option_one">California</string>
    <string name="question_three_option_two">Argentina</string>
    <string name="question_three_option_three">Cuba</string>
    <string name="question_three_option_four">Chile</string>
    <string name="question_four_option_one">Pawn</string>
    <string name="question_four_option_two">Rook</string>
    <string name="question_four_option_three">King</string>
    <string name="question_four_option_four">Bishop</string>
    <string name="question_five_option_one">Hercule Poirot (A)</string>
    <string name="question_five_option_two">Sherlock Holmes</string>
    <string name="question_five_option_three">Bruce Wayne</string>
    <string name="question_five_option_four">Joe Hardy</string>
    <string name="question_six_option_one">6</string>
    <string name="question_six_option_two">94</string>
    <string name="question_six_option_three">103</string>
    <string name="question_six_option_four">3475</string>
    <string name="question_seven_option_one">United States of America</string>
    <string name="question_seven_option_two">Russia</string>
    <string name="question_seven_option_three">Canada</string>
    <string name="question_seven_option_four">Mexico</string>
    <string name="question_eight_answer">1415</string>
    <string name="answer">Your score is: %1$d out of 8</string>
    <string name="unanswered">Question %1$s is unanswered</string>
    <string name="invalid">Question eight does not have a valid year</string>

</resources>
